objects/Legal_Entity__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>155</length>
    <type>Text</type>
</CustomField>