objects/Legal_Entity__c/fields/NS_Legal_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Legal_Entity_ID__c</fullName>
    <inlineHelpText>This field is used in integration</inlineHelpText>
    <label>NS Legal Entity ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>