objects/Legal_Entity__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>155</length>
    <type>Text</type>
</CustomField>