objects/Legal_Entity__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Street 2</label>
    <length>155</length>
    <type>Text</type>
</CustomField>