objects/Legal_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NS_Legal_Entity_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>